rename outgoing shares to shared
