# internal/api/gen/oas_validators_gen.go
@@ -1867,8 +1867,8 @@ func (s *ListSessionsOK) Validate() error {
 	return nil
 }
 
-func (s ListSharedWithMeOKApplicationJSON) Validate() error {
-	alias := ([]SharedWithMeEntry)(s)
+func (s ListSharedOKApplicationJSON) Validate() error {
+	alias := ([]FileEntry)(s)
 	if alias == nil {
 		return errors.New("nil is invalid value")
 	}
@@ -2449,40 +2449,6 @@ func (s *ShareUpdateRequest) Validate() error {
 	}(); err != nil {
 		failures = append(failures, validate.FieldError{
 			Name:  "permission",
-			Error: err,
-		})
-	}
-	if len(failures) > 0 {
-		return &validate.Error{Fields: failures}
-	}
-	return nil
-}
-
-func (s *SharedWithMeEntry) Validate() error {
-	if s == nil {
-		return validate.ErrNilPointer
-	}
-
-	var failures []validate.FieldError
-	if err := func() error {
-		if err := s.Permission.Validate(); err != nil {
-			return err
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "permission",
-			Error: err,
-		})
-	}
-	if err := func() error {
-		if err := s.File.Validate(); err != nil {
-			return err
-		}
-		return nil
-	}(); err != nil {
-		failures = append(failures, validate.FieldError{
-			Name:  "file",
 			Error: err,
 		})
 	}
